FindBugs fixes